<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent">

    <!-- 上面的海报+cast-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">



        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="140dp"
            android:layout_height="200dp"
            android:layout_marginRight="6dp"
            android:scaleType="fitXY"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <LinearLayout
                android:id="@+id/field_buttons"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">
                                
                <Button
                    android:id="@+id/btn_book_ticket"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_button"
                    android:text="@string/btn_book_ticket"
                    android:gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    style="@style/font_mini_white_btn"/>
                <Button
                    android:id="@+id/btn_free_ticket"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_button"
                    android:text="@string/btn_free_ticket"
                    android:gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    style="@style/font_mini_white_btn"/>
                <Button
                    android:id="@+id/btn_order_ticket"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_button"
                    android:text="@string/btn_order_ticket"
                    android:gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    style="@style/font_mini_white_btn"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/field_price"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_above="@id/field_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_price"
                    style="@style/font_red_content"/>
                                
                <TextView
                    android:id="@+id/text_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    style="@style/font_red_content"/>
            </LinearLayout>
        
            <FrameLayout
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_above="@id/field_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none"
                    android:background="@color/transparent">
                    <TextView
                        android:id="@+id/text_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        style="@style/font_white_content"/>
                </ScrollView>
                
                <ImageButton
                    android:id="@+id/btn_thumb"
                    android:layout_gravity="top|right"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    style="@style/img_mini_btn"
                    android:layout_margin="1dp"
                    android:src="@drawable/btn_thumb"/>
            </FrameLayout>
            
            
        </RelativeLayout>
        
    </LinearLayout>
    <!-- 上面的海报+cast END-->


    <!-- 伸缩面板 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:background="@color/transparent">

        <LinearLayout
            android:id="@+id/field_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                    
            <!--剧情简介缩放按钮区域--> 
            <LinearLayout
                android:id="@+id/btn_drawer_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true">
                <ImageButton
                    android:id="@+id/btn_des_switch"
                    style="@style/img_mini_btn"
                    android:clickable="false"
                    android:src="@drawable/btn_exp"/>

                <TextView
                    android:id="@+id/text_des_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drawer_des"
                    style="@style/font_group_title"/>
            </LinearLayout>
            <!--剧情简介缩放按钮区域 END--> 

            <!--剧情简介文本区域-->
            <TextView
                android:id="@+id/text_des_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/font_white_content"/>

            <!--团队介绍缩放按钮区域-->
            <LinearLayout
                android:id="@+id/btn_drawer_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                        
                <ImageButton
                    android:id="@+id/btn_group_switch"
                    style="@style/img_mini_btn"
                    android:src="@drawable/btn_exp"/>

                <TextView
                    android:id="@+id/text_group_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drawer_group"
                    style="@style/font_group_title"/>
            </LinearLayout>
            <!--团队介绍缩放按钮区域 END-->

            <!--团队介绍仿列表区域-->
            <LinearLayout
                android:id="@+id/field_group_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
